Bug fix on test page: column order, mobile spacing

--- a/src/stylesheets/pages/_dashboard.scss
+++ b/src/stylesheets/pages/_dashboard.scss
@@ -1,7 +1,7 @@
 .adminContent {
 	min-height: 91vh;
 	background-color: $admin-bg;
-	padding: .5rem 2rem 0 2rem;
+	padding: .5rem 1rem 0 1rem;
 
 	.dashboard__stats {
 		display: grid;
